--- a/development/index.html
+++ b/development/index.html
@@ -710,6 +710,22 @@
                         </th>
                     </tr>
                 </thead>
+                <thead class="tariffs__section tariffs__section--mobile-head" role="presentation" aria-hidden="true">
+                    <tr class="tariffs__row">
+                        <th>
+
+                        </th>
+                        <th class="tariffs__cell">
+                            Seller
+                        </th>
+                        <th class="tariffs__cell">
+                            Dealer
+                        </th>
+                        <th class="tariffs__cell">
+                            Distributor
+                        </th>
+                    </tr>
+                </thead>
                 <tbody class="tariffs__section tariffs__section--body">
                     <tr class="tariffs__row">
                         <th class="tariffs__cell tariffs__cell--sub-heading">
