--- a/production/index.html
+++ b/production/index.html
@@ -5,8 +5,8 @@
         <meta http-equiv="x-ua-compatible" content="ie=edge">
         <title>Quotalogic</title>
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <link rel="stylesheet" href="fonts/fonts.css?1689314397">
-        <link rel="stylesheet" href="styles/style.css?1689314397">
+        <link rel="stylesheet" href="fonts/fonts.css?1689344104">
+        <link rel="stylesheet" href="styles/style.css?1689344104">
     </head>
     <body>
 
@@ -710,6 +710,22 @@
                         </th>
                     </tr>
                 </thead>
+                <thead class="tariffs__section tariffs__section--mobile-head" role="presentation" aria-hidden="true">
+                    <tr class="tariffs__row">
+                        <th>
+
+                        </th>
+                        <th class="tariffs__cell">
+                            Seller
+                        </th>
+                        <th class="tariffs__cell">
+                            Dealer
+                        </th>
+                        <th class="tariffs__cell">
+                            Distributor
+                        </th>
+                    </tr>
+                </thead>
                 <tbody class="tariffs__section tariffs__section--body">
                     <tr class="tariffs__row">
                         <th class="tariffs__cell tariffs__cell--sub-heading">
@@ -1024,7 +1040,7 @@
         <!-- Outline.js -->
         <script src="vendors/jquery/jquery-3.7.0.min.js"></script>
         <script src="vendors/outline/outline.js"></script>
-        <script src="scripts/_benefits.js?1689314397"></script>
+        <script src="scripts/_benefits.js?1689344104"></script>
 
     </body>
 </html>
