--- a/development/index.html
+++ b/development/index.html
@@ -1022,9 +1022,23 @@
                             </div>
                         </div>
                     </div>
-                    <div class="footer__feedbacks">
-                        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Animi dolorem doloribus enim eos? Amet beatae, consectetur cupiditate dolores eaque eligendi eos eveniet incidunt ipsum magni modi nemo obcaecati officiis omnis, provident quas quia rerum saepe sed similique sint sit temporibus velit. A accusamus ad animi blanditiis consectetur culpa, cum debitis distinctio eligendi enim, est inventore ip
-                    </div>
+                    <form class="footer__feedbacks contact">
+                        <b class="contact__heading">
+                            Contact us
+                        </b>
+                        <div class="contact__fieldset">
+                            <div class="contact__field input">
+                                <input class="input__widget" type="text" placeholder="Email address">
+                            </div>
+                            <div class="contact__field input input--area">
+                                <textarea class="input__widget" placeholder="Message" rows="4"></textarea>
+                            </div>
+                        </div>
+                        <div class="contact__footer">
+                            <button class="contact__submit button button--submit" type="submit">Send message</button>
+                            <div class="contact__note">We will not use your contacts to pass them on to third parties. Only to reply to&nbsp;you.</div>
+                        </div>
+                    </form>
                 </div>
                 <div class="footer__secondary">
                     <div class="footer__emblem logo logo--inverted">
