--- a/development/index.html
+++ b/development/index.html
@@ -1046,12 +1046,12 @@
                     </div>
                     <div class="footer__menu">
                         <div class="footer__link">
-                            <a class="button-alike-link" href="#">
+                            <a class="button-alike-link mfp-handler" href="#privacy-policy">
                                 <span class="button-alike-link__inline">Privacy Policy</span>
                             </a>
                         </div>
                         <div class="footer__link">
-                            <a class="footer__link button-alike-link" href="#">
+                            <a class="button-alike-link mfp-handler" href="#terms-of-use">
                                 <span class="button-alike-link__inline">Terms of Use</span>
                             </a>
                         </div>
@@ -1063,11 +1063,25 @@
             </div>
         </footer>
 
+        <div class="window mfp-hide" id="terms-of-use">
+            <div class="window__heading title">
+                Magnific Popup!
+            </div>
+            <button class="window__close mfp-close" type="button">
+                Close
+            </button>
+            <div class="window__body">
+                <article class="article">
+                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla auctor metus orci. Quisque non diam vitae eros gravida sodales. Nullam placerat ultrices facilisis. Donec tincidunt quis massa et ornare. In id ex ipsum. Suspendisse in ex sem.
+                </article>
+            </div>
+        </div>
 
         <!-- Outline.js -->
         <script src="vendors/jquery/jquery-3.7.0.min.js"></script>
+        <script src="vendors/magnific-popup/dist/jquery.magnific-popup.min.js"></script>
         <script src="vendors/outline/outline.js"></script>
-        <script src="scripts/_benefits.js"></script>
+        <script src="scripts/scripts.js"></script>
 
     </body>
 </html>
