modal close and clean up

--- a/development/index.html
+++ b/development/index.html
@@ -345,7 +345,7 @@
                     start for free
                 </div>
                 <div class="cta__preview">
-                    <a class="cta__thumb" href="#"><!-- может быть некликабельным дивом -->
+                    <div class="cta__thumb"><!-- может быть некликабельным дивом -->
                         <img class="cta__screenshot"
                              srcset="temp/cta-screenshot-secondary-a@2x.jpg 2x"
                              src="temp/cta-screenshot-secondary-a.jpg"
@@ -353,8 +353,8 @@
                              height="356"
                              alt=""
                         >
-                    </a>
-                    <a class="cta__thumb cta__thumb--primary" href="#"><!-- может быть некликабельным дивом -->
+                    </div>
+                    <div class="cta__thumb cta__thumb--primary"><!-- может быть некликабельным дивом -->
                         <img class="cta__screenshot"
                              srcset="temp/cta-screenshot-primary@2x.jpg 2x"
                              src="temp/cta-screenshot-primary.jpg"
@@ -362,8 +362,8 @@
                              height="428"
                              alt=""
                         >
-                    </a>
-                    <a class="cta__thumb" href="#"><!-- может быть некликабельным дивом -->
+                    </div>
+                    <div class="cta__thumb"><!-- может быть некликабельным дивом -->
                         <img class="cta__screenshot"
                              srcset="temp/cta-screenshot-secondary-b@2x.jpg 2x"
                              src="temp/cta-screenshot-secondary-b.jpg"
@@ -371,7 +371,7 @@
                              height="356"
                              alt=""
                         >
-                    </a>
+                    </div>
                 </div>
             </div>
         </section>
