--- a/development/index.html
+++ b/development/index.html
@@ -33,7 +33,7 @@
                         Sharing products from many suppliers as easy as sharing music tracks from many artists on cloud services. Combine them into ‘playlist', tune it, use it or share with partners.
                     </div>
                     <div class="hero__submit shadow">
-                        <a class="button" href="#demo">Book a demo</a>
+                        <a class="button mfp-handler" href="#demo">Book a demo</a>
                     </div>
                 </div>
             </div>
@@ -338,7 +338,7 @@
                 <h2 class="cta__heading title">
                     Form your catalog<br class="desktop-only"> and start selling right&nbsp;now
                 </h2>
-                <a class="cta__submit button button--inverted" href="#demo">
+                <a class="cta__submit button button--inverted mfp-handler" href="#demo">
                     Book a demo
                 </a>
                 <div class="cta__note">
@@ -975,7 +975,7 @@
                     Form your catalog<br class="desktop-only"> and start selling right&nbsp;now
                 </h2>
                 <div class="now__action shadow">
-                    <a class="button button--alternate" href="#demo">
+                    <a class="button button--alternate mfp-handler" href="#demo">
                         Book a demo
                     </a>
                 </div>
@@ -1062,6 +1062,31 @@
                 </div>
             </div>
         </footer>
+
+        <div class="window mfp-hide" id="demo">
+            <button class="window__close mfp-close" type="button">
+                Close
+            </button>
+            <div class="window__body">
+                <form class="contact contact--in-modal">
+                    <b class="contact__heading">
+                        Contact us
+                    </b>
+                    <div class="contact__fieldset">
+                        <div class="contact__field input">
+                            <input class="input__widget" type="text" placeholder="Email address">
+                        </div>
+                        <div class="contact__field input input--area">
+                            <textarea class="input__widget" placeholder="Message" rows="4"></textarea>
+                        </div>
+                    </div>
+                    <div class="contact__footer">
+                        <button class="contact__submit button button--submit" type="submit">Send message</button>
+                        <div class="contact__note">We will not use your contacts to pass them on to third parties. Only to reply to&nbsp;you.</div>
+                    </div>
+                </form>
+            </div>
+        </div>
 
         <div class="window mfp-hide" id="privacy-policy">
             <button class="window__close mfp-close" type="button">
