--- a/development/index.html
+++ b/development/index.html
@@ -152,15 +152,9 @@
                 </h2>
                 <div class="catalog__body">
                     <!-- poster="content/catalog@2x.jpg" -->
-                    <video class="catalog__illustration" width="466" preload="auto" autoplay muted playsinline loop>
+                    <video class="catalog__illustration" width="466" autoplay muted playsinline loop>
                         <source src="content/catalog.webm" type="video/webm">
                         <source src="content/catalog.mp4" type="video/mp4">
-                        <img srcset="content/catalog@2x.jpg 2x"
-                             src="content/catalog.jpg"
-                             width="466"
-                             height="362"
-                             alt=""
-                        >
                     </video>
                     <div class="catalog__description wysiwyg wysiwyg--dense">
                         <p>Combine new sets of products using many suppliers catalogs, price lists, promotions, commercial proposals, – and share them with your partners.</p>
@@ -568,15 +562,9 @@
                         <p>Dealers can further override and extend these characteristics before resharing with partners.</p>
                         <p>This way, the product core stays consistent while each seller in a chain sees an unique product version.</p>
                     </div>
-                    <video class="basics__omnichanelling-video" preload="auto" autoplay muted playsinline loop>
+                    <video class="basics__omnichanelling-video" autoplay muted playsinline loop>
                         <source src="content/basics-omnichanelling.webm" type="video/webm">
                         <source src="content/basics-omnichanelling.mp4" type="video/mp4">
-                        <img srcset="content/catalog@2x.jpg 2x"
-                             src="content/catalog.jpg"
-                             width="532"
-                             height=""
-                             alt=""
-                        >
                     </video>
                 </div>
                 <div class="basics__tile basics__tile--dealer-network">
