--- a/development/index.html
+++ b/development/index.html
@@ -80,7 +80,7 @@
             <div class="start__body">
                 <div class="start__item">
                     <div class="start__preview">
-                        <img class="start__illustration"
+                        <img class="start__illustration animation animation--fade"
                              srcset="content/start-a@2x.jpg 2x"
                              src="content/start-a.jpg"
                              width="300"
@@ -94,7 +94,7 @@
                 </div>
                 <div class="start__item">
                     <div class="start__preview">
-                        <img class="start__illustration"
+                        <img class="start__illustration animation animation--fade"
                              srcset="content/start-b@2x.jpg 2x"
                              src="content/start-b.jpg"
                              width="300"
@@ -108,7 +108,7 @@
                 </div>
                 <div class="start__item">
                     <div class="start__preview">
-                        <img class="start__illustration"
+                        <img class="start__illustration animation animation--fade"
                              srcset="content/start-c@2x.jpg 2x"
                              src="content/start-c.jpg"
                              width="300"
@@ -127,7 +127,7 @@
                 Smart product sets&nbsp;sharing
             </h2>
             <div class="sharing__body">
-                <img class="sharing__illustration"
+                <img class="sharing__illustration animation animation--fade"
                      srcset="content/sharing@2x.jpg"
                      src="content/sharing.jpg"
                      width="513"
@@ -340,7 +340,7 @@
                 </div>
                 <div class="cta__preview">
                     <div class="cta__thumb"><!-- может быть некликабельным дивом -->
-                        <img class="cta__screenshot"
+                        <img class="cta__screenshot animation animation--slide-up"
                              srcset="temp/cta-screenshot-secondary-a@2x.jpg 2x"
                              src="temp/cta-screenshot-secondary-a.jpg"
                              width="486"
@@ -349,7 +349,7 @@
                         >
                     </div>
                     <div class="cta__thumb cta__thumb--primary"><!-- может быть некликабельным дивом -->
-                        <img class="cta__screenshot"
+                        <img class="cta__screenshot animation animation--slide-up"
                              srcset="temp/cta-screenshot-primary@2x.jpg 2x"
                              src="temp/cta-screenshot-primary.jpg"
                              width="584"
@@ -358,7 +358,7 @@
                         >
                     </div>
                     <div class="cta__thumb"><!-- может быть некликабельным дивом -->
-                        <img class="cta__screenshot"
+                        <img class="cta__screenshot animation animation--slide-up"
                              srcset="temp/cta-screenshot-secondary-b@2x.jpg 2x"
                              src="temp/cta-screenshot-secondary-b.jpg"
                              width="486"
