--- a/production/index.html
+++ b/production/index.html
@@ -5,8 +5,8 @@
         <meta http-equiv="x-ua-compatible" content="ie=edge">
         <title>Quotalogic</title>
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <link rel="stylesheet" href="fonts/fonts.css?1689410898">
-        <link rel="stylesheet" href="styles/style.css?1689410898">
+        <link rel="stylesheet" href="fonts/fonts.css?1689577992">
+        <link rel="stylesheet" href="styles/style.css?1689577992">
     </head>
     <body>
 
@@ -80,11 +80,11 @@
             <div class="start__body">
                 <div class="start__item">
                     <div class="start__preview">
-                        <img class="start__illustration"
+                        <img class="start__illustration animation animation--fade animation--order-1"
                              srcset="content/start-a@2x.jpg 2x"
                              src="content/start-a.jpg"
                              width="300"
-                             height="267"
+                             height="240"
                              alt=""
                         >
                     </div>
@@ -94,11 +94,11 @@
                 </div>
                 <div class="start__item">
                     <div class="start__preview">
-                        <img class="start__illustration"
+                        <img class="start__illustration animation animation--fade animation--order-2"
                              srcset="content/start-b@2x.jpg 2x"
                              src="content/start-b.jpg"
                              width="300"
-                             height="238"
+                             height="240"
                              alt=""
                         >
                     </div>
@@ -108,11 +108,11 @@
                 </div>
                 <div class="start__item">
                     <div class="start__preview">
-                        <img class="start__illustration"
+                        <img class="start__illustration animation animation--fade animation--order-3"
                              srcset="content/start-c@2x.jpg 2x"
                              src="content/start-c.jpg"
                              width="300"
-                             height="231"
+                             height="240"
                              alt=""
                         >
                     </div>
@@ -127,7 +127,7 @@
                 Smart product sets&nbsp;sharing
             </h2>
             <div class="sharing__body">
-                <img class="sharing__illustration"
+                <img class="sharing__illustration animation animation--fade"
                      srcset="content/sharing@2x.jpg"
                      src="content/sharing.jpg"
                      width="513"
@@ -340,7 +340,7 @@
                 </div>
                 <div class="cta__preview">
                     <div class="cta__thumb"><!-- может быть некликабельным дивом -->
-                        <img class="cta__screenshot"
+                        <img class="cta__screenshot animation animation--slide animation--order-1"
                              srcset="temp/cta-screenshot-secondary-a@2x.jpg 2x"
                              src="temp/cta-screenshot-secondary-a.jpg"
                              width="486"
@@ -349,7 +349,7 @@
                         >
                     </div>
                     <div class="cta__thumb cta__thumb--primary"><!-- может быть некликабельным дивом -->
-                        <img class="cta__screenshot"
+                        <img class="cta__screenshot animation animation--slide animation--order-2"
                              srcset="temp/cta-screenshot-primary@2x.jpg 2x"
                              src="temp/cta-screenshot-primary.jpg"
                              width="584"
@@ -358,7 +358,7 @@
                         >
                     </div>
                     <div class="cta__thumb"><!-- может быть некликабельным дивом -->
-                        <img class="cta__screenshot"
+                        <img class="cta__screenshot animation animation--slide animation--order-3"
                              srcset="temp/cta-screenshot-secondary-b@2x.jpg 2x"
                              src="temp/cta-screenshot-secondary-b.jpg"
                              width="486"
@@ -1146,7 +1146,7 @@
         <script src="vendors/jquery/jquery-3.7.0.min.js"></script>
         <script src="vendors/magnific-popup/dist/jquery.magnific-popup.min.js"></script>
         <script src="vendors/outline/outline.js"></script>
-        <script src="scripts/scripts.js?1689410898"></script>
+        <script src="scripts/scripts.js?1689577992"></script>
 
     </body>
 </html>
