--- a/development/index.html
+++ b/development/index.html
@@ -7,6 +7,17 @@
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="stylesheet" href="fonts/fonts.css">
         <link rel="stylesheet" href="styles/style.css">
+
+
+        <!-- Favicons -->
+        <link rel="apple-touch-icon" sizes="180x180" href="/favicon/apple-touch-icon.png">
+        <link rel="icon" type="image/png" sizes="32x32" href="/favicon/favicon-32x32.png">
+        <link rel="icon" type="image/png" sizes="16x16" href="/favicon/favicon-16x16.png">
+        <link rel="manifest" href="/site.webmanifest">
+        <link rel="mask-icon" href="/favicon/safari-pinned-tab.svg" color="#0B80BE">
+        <meta name="msapplication-TileColor" content="#0B80BE">
+        <meta name="theme-color" content="#0B80BE">
+
     </head>
     <body>
 
