--- a/development/index.html
+++ b/development/index.html
@@ -18,6 +18,29 @@
         <meta name="msapplication-TileColor" content="#0B80BE">
         <meta name="theme-color" content="#0B80BE">
 
+        <!-- common -->
+        <meta name="title" content="Quotalogic">
+        <meta name="description" content="Sharing products from many suppliers as easy as sharing music tracks from many artists on cloud services. Combine them into ‘playlist', tune it, use it or share with partners.">
+        <link rel="image_src" href="https://shchukin.github.io/quatologic-css/production/favicon/social-media-image-1200x675.jpg">
+
+        <!-- schema.org (google plus) -->
+        <meta itemprop="url" content="https://shchukin.github.io/quatologic-css/production/">
+        <meta itemprop="image" content="https://shchukin.github.io/quatologic-css/production/favicon/social-media-image-1200x675.jpg">
+        <meta itemprop="name" content="Quotalogic">
+        <meta itemprop="description" content="Sharing products from many suppliers as easy as sharing music tracks from many artists on cloud services. Combine them into ‘playlist', tune it, use it or share with partners.">
+
+        <!-- ogp.me (facebook & vkontakte) -->
+        <meta property="og:type" content="website">
+        <meta property="og:site_name" content="Quotalogic">
+        <meta property="og:url" content="https://shchukin.github.io/quatologic-css/production/">
+        <meta property="og:image" content="https://shchukin.github.io/quatologic-css/production/favicon/social-media-image-1200x675.jpg">
+        <meta property="og:image:width" content="1200">
+        <meta property="og:image:height" content="675">
+        <meta property="og:title" content="Quotalogic">
+        <meta property="og:description" content="Sharing products from many suppliers as easy as sharing music tracks from many artists on cloud services. Combine them into ‘playlist', tune it, use it or share with partners.">
+        <meta property="og:locale" content="en_US">
+        <meta property="og:locale:alternate" content="ru_RU">
+
     </head>
     <body>
 
