--- a/development/index.html
+++ b/development/index.html
@@ -52,7 +52,17 @@
         <![endif]-->
 
         <header class="header container container--full-width">
-            <h1 class="header__emblem logo">Quotalogic</h1>
+            <h1 class="header__emblem logo">
+                Quotalogic
+            </h1>
+            <nav class="header__nav">
+                <a class="header__link" href="#how-it-works">How it works</a>
+                <a class="header__link" href="#benefits">Benefits</a>
+                <a class="header__link" href="#numbers">Numbers</a>
+                <a class="header__link" href="#basics">Basics</a>
+                <a class="header__link" href="#tariffs">Tariffs</a>
+                <a class="header__link" href="#contacts">Contacts</a>
+            </nav>
         </header>
         <div class="hero">
             <div class="hero__head">
@@ -179,7 +189,7 @@
                 </div>
             </div>
         </section>
-        <section class="catalog">
+        <section class="catalog" id="how-it-works">
             <div class="catalog__wrap container">
                 <h2 class="catalog__heading title">
                     Multiple suppliers catalogs usage
@@ -403,7 +413,7 @@
                 </div>
             </div>
         </section>
-        <section class="benefits container container--wide">
+        <section class="benefits container container--wide" id="benefits">
             <div class="benefits__navigation">
                 <h2 class="benefits__heading title">
                     Benefits&nbsp;for
@@ -458,7 +468,7 @@
                 </div>
             </div>
         </section>
-        <section class="numbers container container--wide">
+        <section class="numbers container container--wide" id="numbers">
             <h2 class="numbers__heading title">
                 Quotalogic in&nbsp;numbers
             </h2>
@@ -544,7 +554,7 @@
                 </div>
             </div>
         </section>
-        <section class="basics container container--wide">
+        <section class="basics container container--wide" id="basics">
             <h2 class="basics__heading title">
                 Our basics
             </h2>
@@ -675,7 +685,7 @@
                 </div>
             </div>
         </section>
-        <section class="tariffs container container--wide">
+        <section class="tariffs container container--wide" id="tariffs">
             <table class="tariffs__table">
                 <thead class="tariffs__section tariffs__section--head">
                     <tr class="tariffs__row">
@@ -1006,7 +1016,7 @@
                 </div>
             </div>
         </section>
-        <footer class="footer">
+        <footer class="footer" id="contacts">
             <div class="footer__wrap container container--wide">
                 <div class="footer__primary">
                     <div class="footer__summary">
