--- a/development/index.html
+++ b/development/index.html
@@ -51,18 +51,25 @@
             </div>
         <![endif]-->
 
-        <header class="header container container--full-width">
-            <h1 class="header__emblem logo">
-                Quotalogic
-            </h1>
-            <nav class="header__nav">
-                <a class="header__link" href="#how-it-works">How it works</a>
-                <a class="header__link" href="#benefits">Benefits</a>
-                <a class="header__link" href="#numbers">Numbers</a>
-                <a class="header__link" href="#basics">Basics</a>
-                <a class="header__link" href="#tariffs">Tariffs</a>
-                <a class="header__link" href="#contacts">Contacts</a>
-            </nav>
+        <header class="header">
+            <div class="header__fixed-bar">
+                <div class="header__wrap container container--full-width">
+                    <h1 class="header__emblem logo">
+                        Quotalogic
+                    </h1>
+                    <nav class="header__nav">
+                        <a class="header__link" href="#how-it-works">How it works</a>
+                        <a class="header__link" href="#benefits">Benefits</a>
+                        <a class="header__link" href="#numbers">Numbers</a>
+                        <a class="header__link" href="#basics">Basics</a>
+                        <a class="header__link" href="#tariffs">Tariffs</a>
+                        <a class="header__link" href="#contacts">Contacts</a>
+                    </nav>
+                    <a class="header__contacts-handler button button--small mfp-handler" href="#demo">
+                        <span class="header__book-string">Book a</span> demo
+                    </a>
+                </div>
+            </div>
         </header>
         <div class="hero">
             <div class="hero__head">
