code style and compile

--- a/production/index.html
+++ b/production/index.html
@@ -5,8 +5,8 @@
         <meta http-equiv="x-ua-compatible" content="ie=edge">
         <title>Quotalogic</title>
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <link rel="stylesheet" href="fonts/fonts.css?1689694275">
-        <link rel="stylesheet" href="styles/style.css?1689694275">
+        <link rel="stylesheet" href="fonts/fonts.css?1689859263">
+        <link rel="stylesheet" href="styles/style.css?1689859263">
 
 
         <!-- Favicons -->
@@ -51,8 +51,25 @@
             </div>
         <![endif]-->
 
-        <header class="header container container--full-width">
-            <h1 class="header__emblem logo">Quotalogic</h1>
+        <header class="header">
+            <div class="header__fixed-bar">
+                <div class="header__wrap container container--full-width">
+                    <h1 class="header__emblem logo">
+                        Quotalogic
+                    </h1>
+                    <nav class="header__nav">
+                        <a class="header__link" href="#how-it-works">How it works</a>
+                        <a class="header__link" href="#benefits">Benefits</a>
+                        <a class="header__link" href="#numbers">Numbers</a>
+                        <a class="header__link" href="#basics">Basics</a>
+                        <a class="header__link" href="#tariffs">Tariffs</a>
+                        <a class="header__link" href="#contacts">Contacts</a>
+                    </nav>
+                    <a class="header__contacts-handler button button--small mfp-handler" href="#demo">
+                        <span class="header__book-string">Book a</span> demo
+                    </a>
+                </div>
+            </div>
         </header>
         <div class="hero">
             <div class="hero__head">
@@ -179,7 +196,7 @@
                 </div>
             </div>
         </section>
-        <section class="catalog">
+        <section class="catalog" id="how-it-works">
             <div class="catalog__wrap container">
                 <h2 class="catalog__heading title">
                     Multiple suppliers catalogs usage
@@ -403,7 +420,7 @@
                 </div>
             </div>
         </section>
-        <section class="benefits container container--wide">
+        <section class="benefits container container--wide" id="benefits">
             <div class="benefits__navigation">
                 <h2 class="benefits__heading title">
                     Benefits&nbsp;for
@@ -458,7 +475,7 @@
                 </div>
             </div>
         </section>
-        <section class="numbers container container--wide">
+        <section class="numbers container container--wide" id="numbers">
             <h2 class="numbers__heading title">
                 Quotalogic in&nbsp;numbers
             </h2>
@@ -544,7 +561,7 @@
                 </div>
             </div>
         </section>
-        <section class="basics container container--wide">
+        <section class="basics container container--wide" id="basics">
             <h2 class="basics__heading title">
                 Our basics
             </h2>
@@ -675,7 +692,7 @@
                 </div>
             </div>
         </section>
-        <section class="tariffs container container--wide">
+        <section class="tariffs container container--wide" id="tariffs">
             <table class="tariffs__table">
                 <thead class="tariffs__section tariffs__section--head">
                     <tr class="tariffs__row">
@@ -1006,7 +1023,7 @@
                 </div>
             </div>
         </section>
-        <footer class="footer">
+        <footer class="footer" id="contacts">
             <div class="footer__wrap container container--wide">
                 <div class="footer__primary">
                     <div class="footer__summary">
@@ -1180,7 +1197,7 @@
         <script src="vendors/jquery/jquery-3.7.0.min.js"></script>
         <script src="vendors/magnific-popup/dist/jquery.magnific-popup.min.js"></script>
         <script src="vendors/outline/outline.js"></script>
-        <script src="scripts/scripts.js?1689694275"></script>
+        <script src="scripts/scripts.js?1689859263"></script>
 
     </body>
 </html>
