--- a/development/index.html
+++ b/development/index.html
@@ -8,7 +8,6 @@
         <link rel="stylesheet" href="fonts/fonts.css">
         <link rel="stylesheet" href="styles/style.css">
 
-
         <!-- Favicons -->
         <link rel="apple-touch-icon" sizes="180x180" href="/favicon/apple-touch-icon.png">
         <link rel="icon" type="image/png" sizes="32x32" href="/favicon/favicon-32x32.png">
@@ -21,25 +20,24 @@
         <!-- common -->
         <meta name="title" content="Quotalogic">
         <meta name="description" content="Sharing products from many suppliers as easy as sharing music tracks from many artists on cloud services. Combine them into ‘playlist', tune it, use it or share with partners.">
-        <link rel="image_src" href="https://shchukin.github.io/quatologic-css/production/favicon/social-media-image-1200x675.jpg">
+        <link rel="image_src" href="https://quotalogic.io/favicon/social-media-image-1200x675.jpg">
 
         <!-- schema.org (google plus) -->
-        <meta itemprop="url" content="https://shchukin.github.io/quatologic-css/production/">
-        <meta itemprop="image" content="https://shchukin.github.io/quatologic-css/production/favicon/social-media-image-1200x675.jpg">
+        <meta itemprop="url" content="https://quotalogic.io">
+        <meta itemprop="image" content="https://quotalogic.io/favicon/social-media-image-1200x675.jpg">
         <meta itemprop="name" content="Quotalogic">
         <meta itemprop="description" content="Sharing products from many suppliers as easy as sharing music tracks from many artists on cloud services. Combine them into ‘playlist', tune it, use it or share with partners.">
 
         <!-- ogp.me (facebook & vkontakte) -->
         <meta property="og:type" content="website">
         <meta property="og:site_name" content="Quotalogic">
-        <meta property="og:url" content="https://shchukin.github.io/quatologic-css/production/">
-        <meta property="og:image" content="https://shchukin.github.io/quatologic-css/production/favicon/social-media-image-1200x675.jpg">
+        <meta property="og:url" content="https://quotalogic.io">
+        <meta property="og:image" content="https://quotalogic.io/favicon/social-media-image-1200x675.jpg">
         <meta property="og:image:width" content="1200">
         <meta property="og:image:height" content="675">
         <meta property="og:title" content="Quotalogic">
         <meta property="og:description" content="Sharing products from many suppliers as easy as sharing music tracks from many artists on cloud services. Combine them into ‘playlist', tune it, use it or share with partners.">
         <meta property="og:locale" content="en_US">
-        <meta property="og:locale:alternate" content="ru_RU">
 
     </head>
     <body>
