--- a/production/index.html
+++ b/production/index.html
@@ -5,9 +5,8 @@
         <meta http-equiv="x-ua-compatible" content="ie=edge">
         <title>Quotalogic</title>
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <link rel="stylesheet" href="fonts/fonts.css?1689859435">
-        <link rel="stylesheet" href="styles/style.css?1689859435">
-
+        <link rel="stylesheet" href="fonts/fonts.css?1689859851">
+        <link rel="stylesheet" href="styles/style.css?1689859851">
 
         <!-- Favicons -->
         <link rel="apple-touch-icon" sizes="180x180" href="/favicon/apple-touch-icon.png">
@@ -21,25 +20,24 @@
         <!-- common -->
         <meta name="title" content="Quotalogic">
         <meta name="description" content="Sharing products from many suppliers as easy as sharing music tracks from many artists on cloud services. Combine them into ‘playlist', tune it, use it or share with partners.">
-        <link rel="image_src" href="https://shchukin.github.io/quatologic-css/production/favicon/social-media-image-1200x675.jpg">
+        <link rel="image_src" href="https://quotalogic.io/favicon/social-media-image-1200x675.jpg">
 
         <!-- schema.org (google plus) -->
-        <meta itemprop="url" content="https://shchukin.github.io/quatologic-css/production/">
-        <meta itemprop="image" content="https://shchukin.github.io/quatologic-css/production/favicon/social-media-image-1200x675.jpg">
+        <meta itemprop="url" content="https://quotalogic.io">
+        <meta itemprop="image" content="https://quotalogic.io/favicon/social-media-image-1200x675.jpg">
         <meta itemprop="name" content="Quotalogic">
         <meta itemprop="description" content="Sharing products from many suppliers as easy as sharing music tracks from many artists on cloud services. Combine them into ‘playlist', tune it, use it or share with partners.">
 
         <!-- ogp.me (facebook & vkontakte) -->
         <meta property="og:type" content="website">
         <meta property="og:site_name" content="Quotalogic">
-        <meta property="og:url" content="https://shchukin.github.io/quatologic-css/production/">
-        <meta property="og:image" content="https://shchukin.github.io/quatologic-css/production/favicon/social-media-image-1200x675.jpg">
+        <meta property="og:url" content="https://quotalogic.io">
+        <meta property="og:image" content="https://quotalogic.io/favicon/social-media-image-1200x675.jpg">
         <meta property="og:image:width" content="1200">
         <meta property="og:image:height" content="675">
         <meta property="og:title" content="Quotalogic">
         <meta property="og:description" content="Sharing products from many suppliers as easy as sharing music tracks from many artists on cloud services. Combine them into ‘playlist', tune it, use it or share with partners.">
         <meta property="og:locale" content="en_US">
-        <meta property="og:locale:alternate" content="ru_RU">
 
     </head>
     <body>
@@ -1197,7 +1195,7 @@
         <script src="vendors/jquery/jquery-3.7.0.min.js"></script>
         <script src="vendors/magnific-popup/dist/jquery.magnific-popup.min.js"></script>
         <script src="vendors/outline/outline.js"></script>
-        <script src="scripts/scripts.js?1689859435"></script>
+        <script src="scripts/scripts.js?1689859851"></script>
 
     </body>
 </html>
