--- a/development/index.html
+++ b/development/index.html
@@ -122,7 +122,7 @@
                 </div>
             </div>
         </div>
-        <section class="start container">
+        <section class="start container" id="how-it-works">
             <h2 class="start__heading title">
                 Easy start
             </h2>
@@ -194,7 +194,7 @@
                 </div>
             </div>
         </section>
-        <section class="catalog" id="how-it-works">
+        <section class="catalog">
             <div class="catalog__wrap container">
                 <h2 class="catalog__heading title">
                     Multiple suppliers catalogs usage
