--- a/production/index.html
+++ b/production/index.html
@@ -5,8 +5,8 @@
         <meta http-equiv="x-ua-compatible" content="ie=edge">
         <title>Quotalogic</title>
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <link rel="stylesheet" href="fonts/fonts.css?1689859851">
-        <link rel="stylesheet" href="styles/style.css?1689859851">
+        <link rel="stylesheet" href="fonts/fonts.css?1689860965">
+        <link rel="stylesheet" href="styles/style.css?1689860965">
 
         <!-- Favicons -->
         <link rel="apple-touch-icon" sizes="180x180" href="/favicon/apple-touch-icon.png">
@@ -122,7 +122,7 @@
                 </div>
             </div>
         </div>
-        <section class="start container">
+        <section class="start container" id="how-it-works">
             <h2 class="start__heading title">
                 Easy start
             </h2>
@@ -194,7 +194,7 @@
                 </div>
             </div>
         </section>
-        <section class="catalog" id="how-it-works">
+        <section class="catalog">
             <div class="catalog__wrap container">
                 <h2 class="catalog__heading title">
                     Multiple suppliers catalogs usage
@@ -1195,7 +1195,7 @@
         <script src="vendors/jquery/jquery-3.7.0.min.js"></script>
         <script src="vendors/magnific-popup/dist/jquery.magnific-popup.min.js"></script>
         <script src="vendors/outline/outline.js"></script>
-        <script src="scripts/scripts.js?1689859851"></script>
+        <script src="scripts/scripts.js?1689860965"></script>
 
     </body>
 </html>
