--- a/development/index.html
+++ b/development/index.html
@@ -691,11 +691,12 @@
             </div>
         </section>
         <section class="tariffs container container--wide" id="tariffs">
+            <h2 class="visuallyhidden">Tariffs</h2>
             <table class="tariffs__table">
                 <thead class="tariffs__section tariffs__section--head">
                     <tr class="tariffs__row">
                         <th class="tariffs__cell">
-                            <h2 class="tariffs__heading title">Tariffs<span class="desktop-only">:</span></h2>
+                            <div class="tariffs__heading title">Tariffs<span class="desktop-only">:</span></div>
                         </th>
                         <th class="tariffs__cell">
                             <div class="plan">
