font-display: swap;

--- a/development/index.html
+++ b/development/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" itemscope itemtype="http://schema.org/WebPage">
     <head>
         <meta charset="utf-8">
         <meta http-equiv="x-ua-compatible" content="ie=edge">
@@ -748,7 +748,7 @@
                         </th>
                     </tr>
                 </thead>
-                <thead class="tariffs__section tariffs__section--mobile-head" role="presentation" aria-hidden="true">
+                <tbody class="tariffs__section tariffs__section--mobile-head" role="presentation" aria-hidden="true">
                     <tr class="tariffs__row">
                         <th class="tariffs__cell">
 
@@ -763,7 +763,7 @@
                             Distributor
                         </th>
                     </tr>
-                </thead>
+                </tbody>
                 <tbody class="tariffs__section tariffs__section--body">
                     <tr class="tariffs__row">
                         <th class="tariffs__cell tariffs__cell--sub-heading">
