--- a/production/index.html
+++ b/production/index.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
-<html lang="ru">
+<html lang="en" itemscope itemtype="http://schema.org/WebPage">
     <head>
         <meta charset="utf-8">
         <meta http-equiv="x-ua-compatible" content="ie=edge">
         <title>Quotalogic</title>
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <link rel="stylesheet" href="fonts/fonts.css?1689860965">
-        <link rel="stylesheet" href="styles/style.css?1689860965">
+        <link rel="stylesheet" href="fonts/fonts.css?1689861895">
+        <link rel="stylesheet" href="styles/style.css?1689861895">
 
         <!-- Favicons -->
         <link rel="apple-touch-icon" sizes="180x180" href="/favicon/apple-touch-icon.png">
@@ -691,11 +691,12 @@
             </div>
         </section>
         <section class="tariffs container container--wide" id="tariffs">
+            <h2 class="visuallyhidden">Tariffs</h2>
             <table class="tariffs__table">
                 <thead class="tariffs__section tariffs__section--head">
                     <tr class="tariffs__row">
                         <th class="tariffs__cell">
-                            <h2 class="tariffs__heading title">Tariffs<span class="desktop-only">:</span></h2>
+                            <div class="tariffs__heading title">Tariffs<span class="desktop-only">:</span></div>
                         </th>
                         <th class="tariffs__cell">
                             <div class="plan">
@@ -747,7 +748,7 @@
                         </th>
                     </tr>
                 </thead>
-                <thead class="tariffs__section tariffs__section--mobile-head" role="presentation" aria-hidden="true">
+                <tbody class="tariffs__section tariffs__section--mobile-head" role="presentation" aria-hidden="true">
                     <tr class="tariffs__row">
                         <th class="tariffs__cell">
 
@@ -762,7 +763,7 @@
                             Distributor
                         </th>
                     </tr>
-                </thead>
+                </tbody>
                 <tbody class="tariffs__section tariffs__section--body">
                     <tr class="tariffs__row">
                         <th class="tariffs__cell tariffs__cell--sub-heading">
@@ -1195,7 +1196,7 @@
         <script src="vendors/jquery/jquery-3.7.0.min.js"></script>
         <script src="vendors/magnific-popup/dist/jquery.magnific-popup.min.js"></script>
         <script src="vendors/outline/outline.js"></script>
-        <script src="scripts/scripts.js?1689860965"></script>
+        <script src="scripts/scripts.js?1689861895"></script>
 
     </body>
 </html>
