--- a/development/index.html
+++ b/development/index.html
@@ -14,8 +14,8 @@
         <link rel="icon" type="image/png" sizes="16x16" href="/favicon/favicon-16x16.png">
         <link rel="manifest" href="/site.webmanifest">
         <link rel="mask-icon" href="/favicon/safari-pinned-tab.svg" color="#0B80BE">
-        <meta name="msapplication-TileColor" content="#0B80BE">
-        <meta name="theme-color" content="#0B80BE">
+        <meta name="msapplication-TileColor" content="#FFFFFF">
+        <meta name="theme-color" content="#FFFFFF">
 
         <!-- common -->
         <meta name="title" content="Quotalogic">
