--- a/production/index.html
+++ b/production/index.html
@@ -5,8 +5,8 @@
         <meta http-equiv="x-ua-compatible" content="ie=edge">
         <title>Quotalogic</title>
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <link rel="stylesheet" href="fonts/fonts.css?1689863679">
-        <link rel="stylesheet" href="styles/style.css?1689863679">
+        <link rel="stylesheet" href="fonts/fonts.css?1689908920">
+        <link rel="stylesheet" href="styles/style.css?1689908920">
 
         <!-- Favicons -->
         <link rel="apple-touch-icon" sizes="180x180" href="/favicon/apple-touch-icon.png">
@@ -14,8 +14,8 @@
         <link rel="icon" type="image/png" sizes="16x16" href="/favicon/favicon-16x16.png">
         <link rel="manifest" href="/site.webmanifest">
         <link rel="mask-icon" href="/favicon/safari-pinned-tab.svg" color="#0B80BE">
-        <meta name="msapplication-TileColor" content="#0B80BE">
-        <meta name="theme-color" content="#0B80BE">
+        <meta name="msapplication-TileColor" content="#FFFFFF">
+        <meta name="theme-color" content="#FFFFFF">
 
         <!-- common -->
         <meta name="title" content="Quotalogic">
@@ -1196,7 +1196,7 @@
         <script src="vendors/jquery/jquery-3.7.0.min.js"></script>
         <script src="vendors/magnific-popup/dist/jquery.magnific-popup.min.js"></script>
         <script src="vendors/outline/outline.js"></script>
-        <script src="scripts/scripts.js?1689863679"></script>
+        <script src="scripts/scripts.js?1689908920"></script>
 
     </body>
 </html>
