--- a/development/index.html
+++ b/development/index.html
@@ -9,11 +9,11 @@
         <link rel="stylesheet" href="styles/style.css">
 
         <!-- Favicons -->
-        <link rel="apple-touch-icon" sizes="180x180" href="/favicon/apple-touch-icon.png">
-        <link rel="icon" type="image/png" sizes="32x32" href="/favicon/favicon-32x32.png">
-        <link rel="icon" type="image/png" sizes="16x16" href="/favicon/favicon-16x16.png">
-        <link rel="manifest" href="/site.webmanifest">
-        <link rel="mask-icon" href="/favicon/safari-pinned-tab.svg" color="#0B80BE">
+        <link rel="apple-touch-icon" sizes="180x180" href="favicon/apple-touch-icon.png">
+        <link rel="icon" type="image/png" sizes="32x32" href="favicon/favicon-32x32.png">
+        <link rel="icon" type="image/png" sizes="16x16" href="favicon/favicon-16x16.png">
+        <link rel="manifest" href="site.webmanifest">
+        <link rel="mask-icon" href="favicon/safari-pinned-tab.svg" color="#0B80BE">
         <meta name="msapplication-TileColor" content="#FFFFFF">
         <meta name="theme-color" content="#FFFFFF">
 
