--- a/production/index.html
+++ b/production/index.html
@@ -5,15 +5,15 @@
         <meta http-equiv="x-ua-compatible" content="ie=edge">
         <title>Quotalogic</title>
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <link rel="stylesheet" href="fonts/fonts.css?1689908920">
-        <link rel="stylesheet" href="styles/style.css?1689908920">
+        <link rel="stylesheet" href="fonts/fonts.css?1689909486">
+        <link rel="stylesheet" href="styles/style.css?1689909486">
 
         <!-- Favicons -->
-        <link rel="apple-touch-icon" sizes="180x180" href="/favicon/apple-touch-icon.png">
-        <link rel="icon" type="image/png" sizes="32x32" href="/favicon/favicon-32x32.png">
-        <link rel="icon" type="image/png" sizes="16x16" href="/favicon/favicon-16x16.png">
-        <link rel="manifest" href="/site.webmanifest">
-        <link rel="mask-icon" href="/favicon/safari-pinned-tab.svg" color="#0B80BE">
+        <link rel="apple-touch-icon" sizes="180x180" href="favicon/apple-touch-icon.png">
+        <link rel="icon" type="image/png" sizes="32x32" href="favicon/favicon-32x32.png">
+        <link rel="icon" type="image/png" sizes="16x16" href="favicon/favicon-16x16.png">
+        <link rel="manifest" href="site.webmanifest">
+        <link rel="mask-icon" href="favicon/safari-pinned-tab.svg" color="#0B80BE">
         <meta name="msapplication-TileColor" content="#FFFFFF">
         <meta name="theme-color" content="#FFFFFF">
 
@@ -1196,7 +1196,7 @@
         <script src="vendors/jquery/jquery-3.7.0.min.js"></script>
         <script src="vendors/magnific-popup/dist/jquery.magnific-popup.min.js"></script>
         <script src="vendors/outline/outline.js"></script>
-        <script src="scripts/scripts.js?1689908920"></script>
+        <script src="scripts/scripts.js?1689909486"></script>
 
     </body>
 </html>
