--- a/src/index.html
+++ b/src/index.html
@@ -55,12 +55,12 @@
                         Quotalogic
                     </h1>
                     <nav class="header__nav">
-                        <a class="header__link" href="#how-it-works">How it works</a>
-                        <a class="header__link" href="#benefits">Benefits</a>
-                        <a class="header__link" href="#numbers">Numbers</a>
-                        <a class="header__link" href="#basics">Basics</a>
-                        <a class="header__link" href="#tariffs">Tariffs</a>
-                        <a class="header__link" href="#contacts">Contacts</a>
+                        <a class="header__link anchor" href="#how-it-works">How it works</a>
+                        <a class="header__link anchor" href="#benefits">Benefits</a>
+                        <a class="header__link anchor" href="#numbers">Numbers</a>
+                        <a class="header__link anchor" href="#basics">Basics</a>
+                        <a class="header__link anchor" href="#tariffs">Tariffs</a>
+                        <a class="header__link anchor" href="#contacts">Contacts</a>
                     </nav>
                     <a class="header__contacts-handler button button--small mfp-handler" href="#demo">
                         <span class="header__book-string">Book a</span> demo
